# CLPT

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  errorlog.txt  opencl_kernel.cl  opencl_kernel_offline.cl  run.command
makestuff/: CMakeCache.txt  Makefile  clpath  cmake_install.cmake
res/: clpt.clpt.txt  config.clptcfg.txt  default.clpt.txt  myscn.clpt.txt  sponza.clpt.txt
src/: bvh.h  camera.cpp  camera.h  chunk.h  cl_gl_interop.h  configloader.h  geometry.h  linear_algebra.h  main.cpp  material.h  objloader.h  parser.h  primitives.h  scene.h  sceneloader.h  spice.h  user_interaction.h  vec.h
